Bug 74772 - File Corruption - Issue related to List Bullet Numbering
Summary: File Corruption - Issue related to List Bullet Numbering
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium major
Assignee: Rajashri
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-10 06:52 UTC by Rajashri
Modified: 2015-01-24 13:12 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Issue related to List Bullet Numbering (1.16 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-02-10 06:52 UTC, Rajashri
Details
The table containing a Horizontal Line (31.69 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-02-19 06:28 UTC, Rajashri
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rajashri 2014-02-10 06:52:51 UTC
Created attachment 93743 [details]
Issue related to List Bullet Numbering

In numbering.xml there are many changes after RoundTrip and referring media type image.
abstractNumber tag is not preserved for all the Numbering in the document.
Comment 1 Rajashri 2014-02-19 06:28:34 UTC
Created attachment 94325 [details]
The table containing a Horizontal Line

In the Crash_Issue.docx, there is a horizontal present inside the table. This horizontal is exported as a numPictBullet in MS office.
While it fails to do so in LO. As currently in LO images are handled as a graphic bullets and shapes are not being handeled.
Comment 2 Commit Notification 2014-03-13 08:58:11 UTC
Rajashri committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3075b062261435d568d0680c3405ca61a7a40f39

fdo#74772 : File Corruption - Issue related to List Bullet Numbering



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.