fdo#74772 : File Corruption - Issue related to List Bullet Numbering

- A File containing a graphic shape bullet is captured as a numPictBullet in
  MS office[in numbering.xml].
- Currently LO has support for graphic bullet as Image. Graphic bullet as Shape
needs to be preserved in LO.
- Since the numPictBullet is not exported in LO, but in <abstractNum>
<lvlPicBulletId> was exported which lead to corruption.
- Fixed the corruption caused due to lvlPicBulletId.
- However the shape is not getting retained. Need to add implementation
for gprahic bullet as a shape.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx

Change-Id: I2fc2b1ab4b75e8a050e66837a64578b235059473